--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <link rel="stylesheet" href="/index.css">
+        <title>Dinosaurs Deploy</title>
     </head>
 
     <body>
