--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/styles">
+        <link rel="stylesheet" href="/index.css">
         <title>Dinosaurs Deploy</title>
     </head>
 
     <body>
-        <h1>Dinosaurs</h1>
+        <h1>DINOSAURS</h1>
     </body>
 </html>
