--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>DINOSAURS</h1>
+        <script src="/js"></script>
+        <img src ="../images/dinosaurs.webp"/>
     </body>
 </html>
